[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Launcher.gd" type="Script" id=2]
[ext_resource path="res://assets/coh_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/minimize.png" type="Texture" id=4]
[ext_resource path="res://assets/close.png" type="Texture" id=5]

[node name="Launcher" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MinimizeButton" type="TextureButton" parent="."]
margin_left = 888.0
margin_top = 27.0
margin_right = 920.0
margin_bottom = 59.0
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 924.0
margin_top = 27.0
margin_right = 956.0
margin_bottom = 59.0
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
stretch_mode = 3
__meta__ = {
"_edit_lock_": true
}
[connection signal="gui_input" from="." to="." method="_on_Launcher_gui_input"]
[connection signal="pressed" from="MinimizeButton" to="." method="_on_MinimizeButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
